--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.13.8",
     "supabase": "^1.145.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
